@@ -172,6 +172,11 @@ Version 8.13 30-Apr-2011
     matched the line "0102" twice. The same bug affected patterns that started
     with a backwards assertion. For example /\b01|\b02/ also matched "0102"
     twice. 
+    
+33. Previously, PCRE did not allow quantification of assertions. However, Perl 
+    does, and because of capturing effects, quantifying parenthesized 
+    assertions may at times be useful. Quantifiers are now allowed for 
+    parenthesized assertions.
 
 
 Version 8.12 15-Jan-2011
